--- a/templates/base.html
+++ b/templates/base.html
@@ -10,63 +10,60 @@
 
     <title>RecipeNote</title>
 
-    <!-- Bootstrap core CSS
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="static/css/custom.css" rel="stylesheet">
+    <link href="static/css/portfolio.css" rel="stylesheet">
 
   </head>
 
-<body>
-    <div class="site-wrapper">
-    <div class="site-wrapper-inner">
-      <div class="cover-container">
-        <div class="masthead clearfix">
-          <div class="inner">
-            <h3 class="masthead-brand">RecipeNote</h3>
-  
-            <ul class="nav masthead-nav">
-              <!-- <li class="active">
-                <a href="http://bootsnipp.com/iframe/g6GWQ" target=
-                "_blank">View full screen</a>
-              </li> -->
-  
-              <li>
-                <a href="#">Login</a>
-              </li>
-  
-              <li>
-                <a href="#">Sign Up</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-  
-        <div class="inner cover">
-          <h1 class="cover-heading">Are you into preparing your food?</h1>
-  
-          <p class="lead">Keep your favourite recipes organised with RecipeNote.
-              
-          <small>    <br> <a href="#" target=
-                "_blank">Login</a> or <a href="#">Sign Up</a> to get started</small>
-              
-          </p>
-  
-        </div>
-  
-        <div class="mastfoot">
-          <div class="inner">
-            <!-- Validation -->        
-        
-            
-  
-            <p>© 2017 ~ <a href="#">RecipeNote</a></p>
-          </div>
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">RecipeNote</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Recipes
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Favourites</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Categories</a>
+            </li>
+          </ul>
         </div>
       </div>
-  </div>
-  </div>
-</body>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+    {% block content %}{% endblock %}
+    </div>
+    <!-- /.container -->
+    
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; RecipeNote 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/js/bootstrap.bundle.min.js"></script>
+
+  </body>
 
 </html>
