duplicated of forgot-password.html into

--- a/templates/test.html
+++ b/templates/test.html
@@ -38,7 +38,7 @@ body {
       <form class="login-form">
         <div class="row">
           <div class="input-field col s12 center">
-            <!-- <img src="http://w3lessons.info/logo.png" alt="" class="responsive-img valign profile-image-login"> -->
+            <img src="http://w3lessons.info/logo.png" alt="" class="responsive-img valign profile-image-login">
             <p class="center login-form-text">RecipeNote - Organize your recipes</p>
           </div>
         </div>
