--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
               </li> -->
   
               <li>
-                <a href="#">Login</a>
+                <a href="/login">Login</a>
               </li>
   
               <li>
-                <a href="#">Sign Up</a>
+                <a href="register">Sign Up</a>
               </li>
             </ul>
           </div>
