added corresponding links

--- a/templates/category.html
+++ b/templates/category.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <br>
-<div class="text-right"><button class="btn-primary btn-lg">Add Category</button></div>
+<div class="text-right">
+    <a href="/category_create">
+        <button class="btn-primary btn-lg">Add Category</button>
+    </a>
+</div>
 <h1>Your Categories</h1>
 <br>
 <table class="table">
