--- a/templates/register.html
+++ b/templates/register.html
@@ -74,7 +74,7 @@ body {
             <a href="register.html" class="btn waves-effect waves-light col s12">Register Now</a>
           </div>
           <div class="input-field col s12">
-            <p class="margin center medium-small sign-up">Already have an account? <a href="#">Login</a></p>
+            <p class="margin center medium-small sign-up">Already have an account? <a href="/login">Login</a></p>
           </div>
         </div>
       </form>
