--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,7 +3,7 @@
 <!-- Page Heading -->
 <div>
       <h1 class="my-4">Recipes</h1>
-      <div class="text-right"><button class="btn-primary btn-lg">Add Recipe</button></div>
+      <div class="text-right"><a href="/recipes_add"><button class="btn-primary btn-lg">Add Recipe</button></a></div>
       <br>
   </div> 
 
