--- a/designs/templates/index.html
+++ b/designs/templates/index.html
@@ -27,10 +27,6 @@
             <h3 class="masthead-brand">RecipeNote</h3>
   
             <ul class="nav masthead-nav">
-              <!-- <li class="active">
-                <a href="http://bootsnipp.com/iframe/g6GWQ" target=
-                "_blank">View full screen</a>
-              </li> -->
   
               <li>
                 <a href="/login">Login</a>
@@ -48,8 +44,8 @@
   
           <p class="lead">Keep your favourite recipes organised with RecipeNote.
               
-          <small>    <br> <a href="#" target=
-                "_blank">Login</a> or <a href="#">Sign Up</a> to get started</small>
+          <small>    <br> <a href="/login" target=
+                "_blank">Login</a> or <a href="/register">Sign Up</a> to get started</small>
               
           </p>
   
@@ -61,7 +57,7 @@
         
             
   
-            <p>© 2017 ~ <a href="#">RecipeNote</a></p>
+            <p>© 2017 ~ <a href="/recipes">RecipeNote</a></p>
           </div>
         </div>
       </div>
