--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <br><br>
+<p>Please Login to continue</p>
 <form>
     <div class="form-group">
         <input type="text" class="form-control" id="username" placeholder="Enter username" required>
