--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <h1>Recipe Details</h1>
     <div class="text-right"><br><button class="btn-primary btn-lg">Edit Recipe</button></div>
     <div class="card mt-4">
         <img class="card-img-top img-fluid" src="static/images/sphagz.jpg" alt="">
