--- a/recipenote/templates/base.html
+++ b/recipenote/templates/base.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#">Favourites</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/category">Categories</a>
+              <a class="nav-link" href="{{ url_for('category') }}">Categories</a>
             </li>
           </ul>
         </div>
