--- a/recipenote/templates/login.html
+++ b/recipenote/templates/login.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 <br><br>
-<p>Please Login to continue</p>
-<form>
-    <div class="form-group">
-        <input type="text" class="form-control" id="username" placeholder="Enter username" required>
-    </div>
-    <div class="form-group">
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
-    </div>
-    <div class="text-center"><button class="btn-primary btn-lg">Login</button></div>
+<h2>Please Login to continue</h2>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+        {{ message }}
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+<form method="post" action="/login">
+    {{ form.hidden_tag() }}
+    <div class="form-group">{{ form.username(placeholder="e.g etwin", class="form-control", required="required", id="username", type="text") }}</div>
+    <div class="form-group">{{ form.password(placeholder="Enter Your Password", class="form-control", required="required", id="username", type="password") }}</div>
+    <div class="text-center"><button class="btn-lg btn-sign-up btn-primary" type="submit">Login</button></div>
 </form>
+<br><br>
 {% endblock %}
