edit links are now functional for category page.

--- a/recipenote/templates/category.html
+++ b/recipenote/templates/category.html
@@ -2,7 +2,7 @@
 {% block content %}
 <br>
 <div class="text-right">
-    <a href="/category_create">
+    <a href="/category_add">
         <button class="btn-primary btn-lg">Add Category</button>
     </a>
 </div>
@@ -20,17 +20,17 @@
         <tr>
         <td>Local Food</td>
         <td>3</td>
-        <td><a href="#">edit</a></td>
+        <td><a href="/recipe_edit">edit</a></td>
         </tr>
         <tr>
         <td>Drinks</td>
         <td>6</td>
-        <td><a href="#">edit</a></td>
+        <td><a href="/recipe_edit">edit</a></td>
         </tr>
         <tr>
         <td>Salads</td>
         <td>2</td>
-        <td><a href="#">edit</a></td>
+        <td><a href="/recipe_edit">edit</a></td>
         </tr>
     </tbody>
     </table>
