--- a/recipenote/templates/category_create.html
+++ b/recipenote/templates/category_create.html
@@ -2,9 +2,10 @@
 {% block content %}
     <br>
     <h1>Create a new Category</h1>
-    <form>
+    <form method="post", action="category_add">
+        {{ form_categories.hidden_tag() }}
         <div class="form-group">
-            <input type="text" class="form-control" id="categoryName" placeholder="Enter Category Name" required>
+            {{ form_categories.name(placeholder="e.g Local Foods", class="form-control", required="required", id="name", type="text") }}
         </div>
         <div class="form-group">
             <div class="row">
