--- a/recipenote/templates/category_edit.html
+++ b/recipenote/templates/category_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
     <br>
     <h1>Edit Category</h1>
-    <form method="post", action="category_add">
+    <form >
         <div class="form-group">
             <input type="text" class="form-control" id="categoryName" placeholder="Enter Category Name">
         </div>
