removed the number of recipes in category from table

--- a/recipenote/templates/category.html
+++ b/recipenote/templates/category.html
@@ -8,36 +8,24 @@
 </div>
 <h1>Your Categories</h1>
 <br>
+{% if categories %}
 <table class="table">
-    {% if categories %}
-    {% for category in categories %}
     <thead class="thead-inverse">
         <tr>
         <th>Category Name</th>
-        <th>Number of Recipes</th>
         <th>Edit</th>
         </tr>
     </thead>
     <tbody>
         <tr>
+        {% for category in categories %}
         <td>{{ category }}</td>
-        <td>3</td>
-        <td><a href="/recipe_edit">edit</a></td>
+        <td><a href="/category_edit">edit</a></td>
         </tr>
-        <!-- <tr>
-        <td>Drinks</td>
-        <td>6</td>
-        <td><a href="/recipe_edit">edit</a></td>
-        </tr>
-        <tr>
-        <td>Salads</td>
-        <td>2</td>
-        <td><a href="/recipe_edit">edit</a></td>
-        </tr> -->
+        {% endfor %}
     </tbody>
-    {% endfor %}
-    {% else %}
-    <p>No Categories Added yet</p>
-    {% endif %}
-    </table>
+</table>
+{% else %}
+<p>No Categories Added yet</p>
+{% endif %}
 {% endblock %}
