--- a/recipenote/templates/base.html
+++ b/recipenote/templates/base.html
@@ -16,6 +16,15 @@
     <!-- Custom styles for this template -->
     <link href="static/css/portfolio.css" rel="stylesheet">
 
+    <style>
+      footer{
+        bottom: 0%;
+        position: absolute;
+        position: fixed;
+        width: 100%;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -51,6 +60,7 @@
     {% block content %}{% endblock %}
     </div>
     <!-- /.container -->
+    <br><br><br>
     
     <!-- Footer -->
     <footer class="py-5 bg-dark">
