--- a/recipenote/templates/recipes.html
+++ b/recipenote/templates/recipes.html
@@ -6,100 +6,24 @@
       <div class="text-right"><a href="/recipes_add"><button class="btn-primary btn-lg">Add Recipe</button></a></div>
       <br>
   </div> 
-
 <div class="row">
+  {% for recipe in user_recipes %}
   <div class="col-lg-4 col-sm-6 portfolio-item">
     <div class="card h-100">
       <a href="#"><img class="card-img-top" src="static/images/food.jpeg" alt=""></a>
       <div class="card-body">
         <h4 class="card-title">
-          <a href="#">Recipe One</a>
+          <a href="{{ url_for('recipe_detail', recipe_name=recipe) }}">{{ recipe }}</a>
         </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+        <p class="card-text">
+          {% for prep_method in user_recipes[recipe] %}
+            <p>{{ prep_method }}</p>
+          {% endfor %}
+        </p>
       </div>
     </div>
   </div>
-  <div class="col-lg-4 col-sm-6 portfolio-item">
-    <div class="card h-100">
-      <a href="#"><img class="card-img-top" src="static/images/foody.jpeg" alt=""></a>
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="#">Recipe Two</a>
-        </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4 col-sm-6 portfolio-item">
-    <div class="card h-100">
-      <a href="#"><img class="card-img-top" src="static/images/milky.jpg" alt=""></a>
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="#">Recipe Three</a>
-        </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4 col-sm-6 portfolio-item">
-    <div class="card h-100">
-      <a href="#"><img class="card-img-top" src="static/images/IndianoSpices.jpg" alt=""></a>
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="#">Recipe Four</a>
-        </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4 col-sm-6 portfolio-item">
-    <div class="card h-100">
-      <a href="#"><img class="card-img-top" src="static/images/fruits.jpg" alt=""></a>
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="#">Recipe Five</a>
-        </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4 col-sm-6 portfolio-item">
-    <div class="card h-100">
-      <a href="#"><img class="card-img-top" src="static/images/food.jpeg" alt=""></a>
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="#">Recipe Six</a>
-        </h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
-      </div>
-    </div>
-  </div>
+  {% endfor %}
 </div>
 <!-- /.row -->
-
-<!-- Pagination -->
-<ul class="pagination justify-content-center">
-  <li class="page-item">
-    <a class="page-link" href="#" aria-label="Previous">
-      <span aria-hidden="true">&laquo;</span>
-      <span class="sr-only">Previous</span>
-    </a>
-  </li>
-  <li class="page-item">
-    <a class="page-link" href="#">1</a>
-  </li>
-  <li class="page-item">
-    <a class="page-link" href="#">2</a>
-  </li>
-  <li class="page-item">
-    <a class="page-link" href="#">3</a>
-  </li>
-  <li class="page-item">
-    <a class="page-link" href="#" aria-label="Next">
-      <span aria-hidden="true">&raquo;</span>
-      <span class="sr-only">Next</span>
-    </a>
-  </li>
-</ul>
-
 {% endblock %}
