--- a/recipenote/templates/category.html
+++ b/recipenote/templates/category.html
@@ -14,13 +14,15 @@
         <tr>
         <th>Category Name</th>
         <th>Edit</th>
+        <th>Delete</th>
         </tr>
     </thead>
     <tbody>
         <tr>
         {% for category in categories %}
         <td>{{ category }}</td>
-        <td><a href="/category_edit">edit</a></td>
+        <td><a href="{{ url_for('category_edit', name=category) }}">edit</a></td>
+        <td><a href="{{ url_for('delete_category', category_name=category) }}">delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
