added flask_bootstrap, ignored lib files from test coverage

--- a/recipenote/templates/recipe_edit.html
+++ b/recipenote/templates/recipe_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
     <br>
     <h1>Edit Your Recipe</h1>
-    <form method="post" action="/recipe_edit/{{ recipe_name }}>">
+    <form method="post", action="/recipe_edit/{{ recipe_name }}>">
         {{ form_recipe.hidden_tag() }}
     <div class="form-group">
         <div class="form-group">{{ form_recipe.name(placeholder="e.g rolex", class="form-control", required="required", id="name", type="text") }}</div>
@@ -16,7 +16,7 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="example2Textarea">How is the recipe prepared?</label>
+        <label for="Textarea">How is the recipe prepared?</label>
         <div class="form-group">{{ form_recipe.prep_method(placeholder="Enter a list of instructions to prepare recipe", class="form-control", required="required", id="prep_method", type="text") }}</div>      
     </div>
     <div class="row">
