--- a/recipenote/templates/category_create.html
+++ b/recipenote/templates/category_create.html
@@ -1,7 +1,9 @@
+{% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
 {% block content %}
     <br>
     <h1>Create a new Category</h1>
+    {{ utils.flashed_messages(dismissible=True) }}
     <form method="post", action="category_add">
         {{ form_categories.hidden_tag() }}
         <div class="form-group">
