--- a/recipenote/templates/category_edit.html
+++ b/recipenote/templates/category_edit.html
@@ -2,15 +2,12 @@
 {% block content %}
     <br>
     <h1>Edit Category</h1>
-    <form method="post", action="/category_edit/{{ name }}">
+    <form method="post", action="/category_edit/{{name}}">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.name(class="form-control")}}
         </div>
-        <div class="row">
-            <div class="col-md-6 pull-right"><button type="submit" class="btn-lg btn-danger">Delete Category</button></div> 
-            <div class="col-md-6 text-right"><button type="submit" class="btn-lg btn-primary">Update Category</button></div>
-        </div>
+            <div class="text-center"><button type="submit" class="btn-lg btn-primary">Update Category</button></div> 
     </form>
     <br><br>
 {% endblock %}
