--- a/recipenote/templates/recipes_add.html
+++ b/recipenote/templates/recipes_add.html
@@ -16,9 +16,11 @@
             {% endfor %}
           </select>
         </div>
-       
-      </div>  
-      <div class="form-group">{{ form_recipe.prep_method(placeholder="Enter a list of instructions to prepare recipe", class="form-control", required="required", id="prep_method", type="text") }}</div>      
+        
+      <div class="form-group">
+        <label for="Textarea">How is the recipe prepared?</label>
+      <div class="form-group">{{ form_recipe.prep_method(placeholder="Enter a list of instructions to prepare recipe", class="form-control", required="required", id="prep_method", type="text") }}</div>  
+    </div>    
       <div class="text-center"><button type="submit" class="btn-lg btn-primary">Add Recipe</button></div><br>
     </form>
     
