--- a/recipenote/templates/register.html
+++ b/recipenote/templates/register.html
@@ -1,14 +1,9 @@
+{% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
 {% block content %}
 <br><br>
 <h2>Please Register to continue</h2>
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-{% for message in messages %}
-    {{ message }}
-{% endfor %}
-{% endif %}
-{% endwith %}
+{{ utils.flashed_messages(dismissible=True) }}
 <form method="post", action="/register">
     {{ form.hidden_tag() }}
     <div class="form-group">{{ form.username(placeholder="e.g etwin", class="form-control", required="required", id="username", type="text") }}</div>
