removed the delete button

--- a/recipenote/templates/recipe_edit.html
+++ b/recipenote/templates/recipe_edit.html
@@ -19,10 +19,8 @@
         <label for="Textarea">How is the recipe prepared?</label>
         <div class="form-group">{{ form_recipe.prep_method(placeholder="Enter a list of instructions to prepare recipe", class="form-control", required="required", id="prep_method", type="text") }}</div>      
     </div>
-    <div class="row">
-        <div class="col-md-6 pull-right"><button type="submit" class="btn-lg btn-danger">Delete Recipe</button></div>
-        <div class="col-md-6 text-right"><button type="submit" class="btn-lg btn-primary">Add Recipe</button></div>
-    </div>
+    
+        <div class="text-center"><button type="submit" class="btn-lg btn-primary">Add Recipe</button></div>
     <br>
     </form>
     </div>
